--- a/index.html
+++ b/index.html
@@ -53,6 +53,11 @@
             </div>
           </div>
         </div>
+        <div class="top-blogs">
+          <article>
+            <div></div>
+          </article>
+        </div>
       </section>
     </main>
   </body>
